...
        <Button
          variant="filled"
          onPress={() =>
            navigation.navigate('StackNewsFeed', { date: Date.now() })
          }
        >
          Navigate to feed
        </Button>
        <Button
          variant="filled"
          onPress={() => navigation.popTo('StackAlbums')}
        >
          Pop to albums
...
      initialParams: { author: 'Gandalf' },
      getId: ({ params }) => params?.author,
      linking: COMMON_LINKING_CONFIG.Article,
    }),
    StackNewsFeed: createStackScreen({
      screen: NewsFeedScreen,
      options: { title: 'Feed' },
      linking: COMMON_LINKING_CONFIG.NewsFeed,
    }),
    StackContacts: createStackScreen({
      screen: ContactsScreen,
      options: {
        headerSearchBarOptions: {
...
