appId: ${APP_ID}
name: Bottom Tabs - Basic
---
- runFlow:
    file: ../launch.yml
    env:
      LINK: bottom-tabs
      TEXT: 'Article by Gandalf'
- tapOn:
    text: 'Navigate to feed'
- assertVisible:
    text: 'Feed'
- tapOn:
    id: 'albums'
- assertVisible:
    text: 'Albums'
- tapOn:
    text: 'Go to Chat'
- assertVisible:
    text: 'Chat'
- tapOn:
    id: 'contacts'
- assertVisible:
    text: 'Marissa Castillo'
- scroll
- assertNotVisible:
    text: 'Marissa Castillo'
- tapOn:
    id: 'contacts'
- extendedWaitUntil:
    visible:
      text: 'Marissa Castillo'
    timeout: 5000
- tapOn:
    id: 'article'
- assertVisible:
    text: 'Article by Gandalf'
- tapOn:
    text: 'Navigate to feed'
- assertVisible:
    text: 'Feed'
- tapOn:
    id: 'article'
- assertVisible:
    text: 'Article by Gandalf'
