appId: ${APP_ID}
name: Bottom Tabs - Preload Flow
---
- runFlow:
    file: ../launch.yml
    env:
      LINK: bottom-tabs-preload-flow
      TEXT: 'Bottom Tabs Preload Flow'
- assertVisible:
    text: 'Details is not preloaded yet.'
- tapOn:
    text: 'Preload Details'
- extendedWaitUntil:
    timeout: 10000
    visible: 'Details is preloaded!'
- tapOn:
    text: 'Navigate to Details'
- assertVisible:
    text: 'Loaded!'
- tapOn:
    text: 'Back to home'
- assertVisible:
    text: 'Bottom Tabs Preload Flow'
- tapOn:
    text: 'Navigate to Details'
- assertVisible:
    text: 'Loaded!'
