appId: ${APP_ID}
name: Stack - Preload Flow
---
- runFlow:
    file: ../launch.yml
    env:
      LINK: stack-preload-flow
      TEXT: 'Stack Preload Flow'
- assertVisible:
    text: 'Details is not preloaded yet.'
- tapOn:
    text: 'Preload Details'
- extendedWaitUntil:
    timeout: 7000
    visible: 'Details is preloaded!'
- tapOn:
    text: 'Navigate to Details'
- assertVisible:
    text: 'Loaded!'
- assertVisible:
    text: 'Preloaded'
- tapOn:
    text: 'Back to home'
- assertVisible:
    text: 'Details is not preloaded yet.'
- tapOn:
    text: 'Navigate to Details'
- assertVisible:
    text: 'Fresh'
