appId: ${APP_ID}
name: Tab Preload Flow
---
- runFlow:
    file: ../launch.yml
    env:
      LINK: tab-preload-flow
      TEXT: 'Home'
- assertVisible:
    text: 'Details is not preloaded yet.'
- tapOn:
    text: 'Preload Details'
- extendedWaitUntil:
    timeout: 3000
    visible: 'Details is preloaded!'
- tapOn:
    text: 'Navigate to Details'
- assertVisible:
    text: 'Loaded!'
- tapOn:
    text: 'Back to home'
- tapOn:
    text: 'Navigate to Details'
- assertVisible:
    text: 'Loaded!'
